# MyInteropProject

./: .gitignore  testetri.sln
app/: Program.cs
native/: CMakeLists.txt
native/core/include/: math.h
native/core/src/: math.c
native/wrapper/include/: math.hpp
native/wrapper/src/: export_math.cpp  math.cpp
